// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with default conditional styles 1`] = `
.c0 {
  display: inline;
  font-size: 1.2rem;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<label
  className="c0"
>
  Providers
</label>
`;

exports[`renders with default conditional styles 2`] = `
.c0 {
  display: block;
  font-size: 1.6rem;
  font-weight: 600;
  margin-bottom: 0.5rem;
  margin-top: 2rem;
}

<label
  className="c0"
>
  Providers
</label>
`;
